# cpp_app_skeleton

./: .gitmodules  CMakeLists.txt
src/: main.cc
